# Vehicle-Insurance-DataPipeline-MLops-

./: .env.example  .gitignore  PROJECT_STRUCTURE.md  Project Vehicle Insurance Data Pipeline.docx  README.md  app.py  check_s3_bucket.py  check_s3_versions.py  crashcourse.txt  demo.py  project_flow.txt  pyproject.toml  setup.py  template.py  test_aws_connection.py  workflow.txt  ~$oject Vehicle Insurance Data Pipeline.docx  ~WRL0005.tmp
.github/workflows/: awes.yaml
config/: schema.yaml
notebook/: exp-notebook.ipynb
src/: __init__.py
src/cloud_storage/: __init__.py  aws_storage.py
src/components/: __init__.py  data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: __init__.py  aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: __init__.py
src/entity/: __init__.py  artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
src/utils/: __init__.py  main_utils.py
